F04: Fix z-index issue

--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -136,11 +136,12 @@
 }
 
 .pattern {
+  z-index: -1;
    position: fixed;
   width: 100vw;
   height: 100vh;
 background-color: #7F7CFF;
-opacity: 0.2;
+opacity: 0.15;
 background-image:  linear-gradient(30deg, #a7abfa 12%, transparent 12.5%, transparent 87%, #a7abfa 87.5%, #a7abfa), linear-gradient(150deg, #a7abfa 12%, transparent 12.5%, transparent 87%, #a7abfa 87.5%, #a7abfa), linear-gradient(30deg, #a7abfa 12%, transparent 12.5%, transparent 87%, #a7abfa 87.5%, #a7abfa), linear-gradient(150deg, #a7abfa 12%, transparent 12.5%, transparent 87%, #a7abfa 87.5%, #a7abfa), linear-gradient(60deg, #a7abfa77 25%, transparent 25.5%, transparent 75%, #a7abfa77 75%, #a7abfa77), linear-gradient(60deg, #a7abfa77 25%, transparent 25.5%, transparent 75%, #a7abfa77 75%, #a7abfa77);
 background-size: 20px 35px;
 background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
